# ocr-project

./: (미사용)app.py  README.md  app.py  main.py  main_ocr.py  pyproject.toml
util/: image_util.py  pay_util.py
