[project]
name = "ocr-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "paddleocr>=3.3.1",
    "paddlepaddle>=3.2.1",
    "paddlex[ocr]==3.3.8",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pyclipper>=1.3.0.post6",
    "pyyaml>=6.0.2",
    "shapely>=2.1.2",
    "streamlit>=1.51.0",
]
