[project]
name = "ocr-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy==1.24.4",
    "opencv-python>=4.6.0,<4.7.0",
    "paddleocr>=2.7.0,<2.8.0",
    "paddlepaddle-gpu==2.5.2",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pyclipper>=1.3.0.post6",
    "pyyaml>=6.0.2",
    "shapely>=2.1.2",
    "streamlit>=1.51.0",
]
